--- a/buildout.cfg
+++ b/buildout.cfg
@@ -36,9 +36,13 @@ eggs =
     PILwoTK
     plone.reload
     cesstex.skin
+    collective.plonetruegallery
+    collective.captcha==1.3
 
 zcml =
     cesstex.skin
+    collective.plonetruegallery
+    collective.captcha
 
 products =
     ${productdistros:location}
