--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,6 +11,8 @@ parts =
 develop =
     src/cesstex.skin
 
+versions = versions
+
 find-links =
     http://download.zope.org/distribution/
     http://effbot.org/downloads
@@ -19,6 +21,9 @@ find-links =
     http://dist.plone.org/
 
 eggs =
+
+[versions]
+zope.component = 3.4
 
 [instance]
 recipe = plone.recipe.zope2instance
@@ -34,6 +39,7 @@ eggs =
     ${buildout:eggs}
     ${plone:eggs}
     PILwoTK
+    z3c.jbot
     plone.reload
     cesstex.skin
     collective.plonetruegallery
@@ -67,7 +73,6 @@ skip-fake-eggs = zope.testing
 [scripts]
 recipe = zc.recipe.egg:scripts
 eggs = ZSI
-       ipdb
 extra-paths = ${zope2:location}/lib/python
 
 [zopepy]
