--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
+extensions = buildout.dumppickedversions
 parts =
     instance
-    plone
     zope2
     scripts
     zopepy
@@ -11,6 +11,7 @@ parts =
 develop =
     src/cesstex.skin
 
+extends = http://dist.plone.org/release/3.3.1/versions.cfg
 versions = versions
 
 find-links =
@@ -23,7 +24,8 @@ find-links =
 eggs =
 
 [versions]
-zope.component = 3.4
+zope.component = 3.5.1
+five.localsitemanager = 1.1
 
 [instance]
 recipe = plone.recipe.zope2instance
@@ -37,13 +39,14 @@ environment-vars =
 
 eggs =
     ${buildout:eggs}
-    ${plone:eggs}
+    Plone
     PILwoTK
     z3c.jbot
     plone.reload
     cesstex.skin
     collective.plonetruegallery
     collective.captcha==1.3
+    Products.CalendarX
 
 zcml =
     cesstex.skin
@@ -52,14 +55,9 @@ zcml =
 
 products =
     ${productdistros:location}
-    ${plone:products}
-
-[plone]
-recipe = plone.recipe.plone
-
 [zope2]
 recipe = plone.recipe.zope2install
-url = ${plone:zope2-url}
+url = http://www.zope.org/Products/Zope/2.11.4/Zope-2.11.4-final.tgz
 fake-eggs = true
 # requiring zope.testing for z2testrunner
 skip-fake-eggs = zope.testing
