--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,7 +11,7 @@ parts =
 develop =
     src/cesstex.skin
 
-extends = http://dist.plone.org/release/3.3.1/versions.cfg
+extends = http://dist.plone.org/release/3.3.4/versions.cfg
 versions = versions
 
 find-links =
@@ -63,6 +63,7 @@ fake-eggs = true
 skip-fake-eggs = zope.testing
                  zope.contenttype
                  zope.component
+                 zope.schema
                  zope.interface
                  zope.app.testing
                  zope.app.debug
