pin stable plonetruegallery ##

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,6 @@
 [buildout]
 extensions = buildout.dumppickedversions
+dump-picked-versions-file = versions-picked.cfg
 parts =
     instance
     zope2
@@ -13,7 +14,7 @@ develop =
 
 extends = http://dist.plone.org/release/3.3.4/versions.cfg
 versions = versions
-
+prefer-final = true
 find-links =
     http://download.zope.org/distribution/
     http://effbot.org/downloads
@@ -26,6 +27,7 @@ eggs =
 [versions]
 zope.component = 3.5.1
 five.localsitemanager = 1.1
+collective.plonetruegallery = 0.7.1
 
 [instance]
 recipe = plone.recipe.zope2instance
