add ldap. this fix #1547

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -49,6 +49,8 @@ eggs =
     collective.plonetruegallery
     collective.captcha==1.3
     Products.CalendarX
+    python-ldap
+    Products.PloneLDAP
 
 zcml =
     cesstex.skin
@@ -60,7 +62,6 @@ products =
 [zope2]
 recipe = plone.recipe.zope2install
 url = http://www.zope.org/Products/Zope/2.11.4/Zope-2.11.4-final.tgz
-fake-eggs = true
 # requiring zope.testing for z2testrunner
 skip-fake-eggs = zope.testing
                  zope.contenttype
