Add schemaextender to buildout This refs #2279

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -23,6 +23,7 @@ find-links =
     http://dist.plone.org/
 
 eggs =
+    archetypes.schemaextender
 
 [versions]
 zope.component = 3.5.1
@@ -56,6 +57,7 @@ zcml =
     cesstex.skin
     collective.plonetruegallery
     collective.captcha
+    archetypes.schemaextender
 
 products =
     ${productdistros:location}
