--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,6 +25,7 @@ find-links =
 eggs =
     archetypes.schemaextender
     Products.PloneHotfix20110720
+    Products.PloneHotfix20110531
 
 [versions]
 zope.component = 3.5.1
