--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,7 +25,7 @@ find-links =
 eggs =
     archetypes.schemaextender
     Products.PloneHotfix20110720
-    Products.PloneHotfix20110531
+    Products.PloneHotfix20110531==2.0
     Products.Zope_Hotfix_20110622
 
 [versions]
