Fix namespace for Products.Zope-Hotfix-20110622 ##

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -26,7 +26,7 @@ eggs =
     archetypes.schemaextender
     Products.PloneHotfix20110720
     Products.PloneHotfix20110531==2.0
-    Products.Zope_Hotfix_20110622
+    Products.Zope-Hotfix-20110622
 
 [versions]
 zope.component = 3.5.1
