--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,6 +13,7 @@ develop =
     src/cesstex.skin
 
 extends = http://dist.plone.org/release/3.3.4/versions.cfg
+          http://svn.affinitic.be/buildouts/base/plone3.cfg
 versions = versions
 prefer-final = true
 find-links =
@@ -22,10 +23,8 @@ find-links =
     http://svn.kmrc.de/download/distribution/
     http://dist.plone.org/
 
-eggs =
+eggs +=
     archetypes.schemaextender
-    Products.PloneHotfix20110720
-    Products.PloneHotfix20110531==2.0
     Products.Zope-Hotfix-20110622
 
 [versions]
