modification du buildout pour sqlalchemy et zpsychopg ##

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,9 +8,13 @@ parts =
     zopepy
     PILwoTK
     productdistros
+    mx-base
+    psycopg2
+    omelette
 
 develop =
     src/cesstex.skin
+    src/ceestex.db.pgsql
 
 extends = http://dist.plone.org/release/3.3.4/versions.cfg
           http://svn.affinitic.be/buildouts/base/plone3.cfg
@@ -19,18 +23,42 @@ prefer-final = true
 find-links =
     http://download.zope.org/distribution/
     http://effbot.org/downloads
+    http://packages.affinitic.be/simple
+    http://pypi.affinitic.be
+    http://pypi.python.org/pypi/SQLAlchemy
+    http://pypi.python.org/pypi/z3c.sqlalchemy
     http://pypi.python.org/pypi/SQLAlchemy
     http://svn.kmrc.de/download/distribution/
     http://dist.plone.org/
+    http://packages.affinitic.be/simple
+    http://eggs.affinitic.be/
+
+index = http://pypi.affinitic.be
 
 eggs +=
     archetypes.schemaextender
+    Plone
+    ipdb
+    z3c.json
+    z3c.jbot
+    sqlalchemy
+    z3c.sqlalchemy
+    psycopg2
+    egenix-mx-base
+    lxml
+    cesstex.skin
     Products.Zope-Hotfix-20110622
 
 [versions]
 zope.component = 3.5.1
 five.localsitemanager = 1.1
 collective.plonetruegallery = 0.7.1
+psycopg2 = 2.4.2
+z3c.sqlalchemy = 1.4.0
+Products.LocalFS = 1.2
+python-ldap = 2.4.12
+Products.PloneLDAP = 1.2
+affinitic.pwmanager = 0.2
 
 [instance]
 recipe = plone.recipe.zope2instance
@@ -45,11 +73,8 @@ environment-vars =
 
 eggs =
     ${buildout:eggs}
-    Plone
     PILwoTK
-    z3c.jbot
     plone.reload
-    cesstex.skin
     collective.plonetruegallery
     collective.captcha==1.3
     Products.CalendarX
@@ -60,10 +85,20 @@ zcml =
     cesstex.skin
     collective.plonetruegallery
     collective.captcha
+    collective.javascript.jqueryui
+    z3c.json
     archetypes.schemaextender
+
+zcml-additional =
+    <configure xmlns = "http://namespaces.zope.org/zope"
+               xmlns:passmgr = "http://affinitic.be/passmgr">
+        <passmgr:pwdfile name = "pg"
+                 filename = "pgpass" />
+    </configure>
 
 products =
     ${productdistros:location}
+
 [zope2]
 recipe = plone.recipe.zope2install
 url = http://www.zope.org/Products/Zope/2.11.4/Zope-2.11.4-final.tgz
@@ -88,6 +123,23 @@ eggs = ${instance:eggs}
 interpreter = zopepy
 extra-paths = ${zope2:location}/lib/python
 scripts = zopepy
+
+[mx-base]
+recipe = collective.recipe.mxbase
+
+[psycopg2]
+recipe = zc.recipe.egg:custom
+egg = psycopg2
+find-links = http://eggs.affinitic.be/psycopg2-2.0.6.tar.gz
+define = PSYCOPG_EXTENSIONS,PSYCOPG_DISPLAY_SIZE,PSYCOPG_NEW_BOOLEAN,HAVE_PQFREEMEM,HAVE_PQPROTOCOL3
+include-dirs = /usr/include
+library-dirs = /usr/lib
+rpath = /usr/lib
+
+[omelette]
+recipe = collective.recipe.omelette
+eggs = ${instance:eggs}
+products =  ${instance:products}
 
 [PILwoTK]
 recipe = zc.recipe.egg
