modification du buildout pour sqlalchemy, localfs, affinitic.pwmanager et zpsychopg ##

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -47,6 +47,8 @@ eggs +=
     egenix-mx-base
     lxml
     cesstex.skin
+    affinitic.pwmanager
+    Products.LocalFS
     Products.Zope-Hotfix-20110622
 
 [versions]
@@ -78,10 +80,13 @@ eggs =
     collective.plonetruegallery
     collective.captcha==1.3
     Products.CalendarX
-    python-ldap
     Products.PloneLDAP
+    Products.LocalFS
+    python-ldap
+    
 
 zcml =
+    affinitic.pwmanager
     cesstex.skin
     collective.plonetruegallery
     collective.captcha
