Add cesstex.db.pgsql to buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,7 +14,7 @@ parts =
 
 develop =
     src/cesstex.skin
-    src/ceestex.db.pgsql
+    src/cesstex.db.pgsql
 
 extends = http://dist.plone.org/release/3.3.4/versions.cfg
           http://svn.affinitic.be/buildouts/base/plone3.cfg
@@ -47,6 +47,7 @@ eggs +=
     egenix-mx-base
     lxml
     cesstex.skin
+    cesstex.db.pgsql
     affinitic.pwmanager
     Products.LocalFS
     Products.Zope-Hotfix-20110622
@@ -88,6 +89,7 @@ eggs =
 zcml =
     affinitic.pwmanager
     cesstex.skin
+    cesstex.db.pgsql
     collective.plonetruegallery
     collective.captcha
     collective.javascript.jqueryui
