ajout de sqlalchemy et localfs. ref #5303

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,20 +18,17 @@ develop =
 
 extends = http://dist.plone.org/release/3.3.4/versions.cfg
           http://svn.affinitic.be/buildouts/base/plone3.cfg
+          versions.cfg
 versions = versions
 prefer-final = true
 find-links =
     http://download.zope.org/distribution/
     http://effbot.org/downloads
-    http://packages.interne.affinitic.be/simple
     http://pypi.interne.affinitic.be
-    http://pypi.python.org/pypi/SQLAlchemy
-    http://pypi.python.org/pypi/z3c.sqlalchemy
-    http://pypi.python.org/pypi/SQLAlchemy
     http://svn.kmrc.de/download/distribution/
     http://dist.plone.org/
     http://packages.interne.affinitic.be/simple
-    http://eggs.interne.affinitic.be/
+    http://eggs.affinitic.be/
 
 index = http://pypi.affinitic.be
 
@@ -50,16 +47,6 @@ eggs +=
     cesstex.db.pgsql
     Products.Zope-Hotfix-20110622
 
-[versions]
-zope.component = 3.5.1
-five.localsitemanager = 1.1
-collective.plonetruegallery = 0.7.1
-psycopg2 = 2.4.2
-z3c.sqlalchemy = 1.4.0
-python-ldap = 2.4.12
-Products.PloneLDAP = 1.1
-affinitic.pwmanager = 0.2
-
 [instance]
 recipe = plone.recipe.zope2instance
 zope2-location = ${zope2:location}
@@ -77,6 +64,7 @@ eggs =
     plone.reload
     collective.plonetruegallery
     collective.captcha==1.3
+    collective.javascript.jqueryui
     Products.CalendarX
     Products.PloneLDAP
     Products.LocalFS
