Use mr.developer instead of EXTERNALS Add prod.cfg for https git cloning This refs affinitic #5574

--- a/base.cfg
+++ b/base.cfg
@@ -1,6 +1,9 @@
 [buildout]
-extensions = buildout.dumppickedversions
+extensions =
+    buildout.dumppickedversions
+    mr.developer
 dump-picked-versions-file = versions-picked.cfg
+
 parts =
     instance
     zope2
@@ -12,9 +15,9 @@ parts =
     psycopg2
     omelette
 
-develop =
-    src/cesstex.skin
-    src/cesstex.db.pgsql
+auto-checkout =
+    cesstex.skin
+    cesstex.db.pgsql
 
 extends = http://dist.plone.org/release/3.3.4/versions.cfg
           https://raw.github.com/affinitic/affinitic.dist/master/plone334.cfg
@@ -142,3 +145,7 @@ urls =
 
 nested-packages =
 version-suffix-packages =
+
+[sources]
+cesstex.skin = git git@github.com:affinitic/cesstex.skin.git
+cesstex.db.pgsql = git git@github.com:affinitic/cesstex.db.pgsql.git
