Migration Plone 3.3.4 vers Plone 4.3.2
modification du buildout
(3)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,41 +1,30 @@
 [buildout]
-extensions = buildout.dumppickedversions
+extends =
+    https://raw.github.com/affinitic/affinitic.dist/master/plone.cfg
+    https://raw.github.com/affinitic/affinitic.dist/master/plone432.cfg
+    versions.cfg
+develop = .
+extensions =
+    mr.developer
+sources-dir = src
 dump-picked-versions-file = versions-picked.cfg
+versions = versions
+auto-checkout =
+    cesstex.skin
+    cesstex.db.pgsql
+
+
 parts =
-    instance
-    zope2
-    scripts
-    zopepy
-    PILwoTK
     productdistros
-    mx-base
-    psycopg2
     omelette
 
 develop =
     src/cesstex.skin
     src/cesstex.db.pgsql
 
-extends = http://dist.plone.org/release/3.3.4/versions.cfg
-          https://raw.github.com/affinitic/affinitic.dist/master/plone334.cfg
-          versions.cfg
-versions = versions
-prefer-final = true
-find-links =
-    http://download.zope.org/distribution/
-    http://effbot.org/downloads
-    http://pypi.interne.affinitic.be
-    http://svn.kmrc.de/download/distribution/
-    http://dist.plone.org/
-    http://packages.interne.affinitic.be/simple
-    http://eggs.affinitic.be/
-
-index = http://pypi.affinitic.be
-
 eggs +=
     archetypes.schemaextender
     Plone
-    ipdb
     z3c.json
     z3c.jbot
     sqlalchemy
@@ -45,11 +34,8 @@ eggs +=
     lxml
     cesstex.skin
     cesstex.db.pgsql
-    Products.Zope-Hotfix-20110622
 
 [instance]
-recipe = plone.recipe.zope2instance
-zope2-location = ${zope2:location}
 user = admin:xxxxxxxx
 http-address = 8880
 ftp-address = 8821
@@ -60,12 +46,7 @@ environment-vars =
 
 eggs =
     ${buildout:eggs}
-    PILwoTK
-    plone.reload
     collective.plonetruegallery
-    collective.captcha==1.3
-    collective.javascript.jqueryui
-    Products.CalendarX
     Products.LocalFS
     affinitic.pwmanager
 
@@ -73,8 +54,6 @@ zcml =
     cesstex.skin
     cesstex.db.pgsql
     collective.plonetruegallery
-    collective.captcha
-    collective.javascript.jqueryui
     z3c.json
     archetypes.schemaextender
     affinitic.pwmanager
@@ -89,30 +68,10 @@ zcml-additional =
 products =
     ${productdistros:location}
 
-[zope2]
-recipe = plone.recipe.zope2install
-url = http://www.zope.org/Products/Zope/2.11.4/Zope-2.11.4-final.tgz
-# requiring zope.testing for z2testrunner
-skip-fake-eggs = zope.testing
-                 zope.contenttype
-                 zope.component
-                 zope.schema
-                 zope.interface
-                 zope.app.testing
-                 zope.app.debug
-                 zope.i18n
+[sources]
+cesstex.skin = git git@github.com:affinitic/cesstex.skin.git
+cesstex.db.pgsql = git git@github.com:affinitic/cesstex.db.pgsql.git
 
-[scripts]
-recipe = zc.recipe.egg:scripts
-eggs = ZSI
-extra-paths = ${zope2:location}/lib/python
-
-[zopepy]
-recipe = zc.recipe.egg
-eggs = ${instance:eggs}
-interpreter = zopepy
-extra-paths = ${zope2:location}/lib/python
-scripts = zopepy
 
 [mx-base]
 recipe = collective.recipe.mxbase
@@ -130,11 +89,6 @@ rpath = /usr/lib
 recipe = collective.recipe.omelette
 eggs = ${instance:eggs}
 products =  ${instance:products}
-
-[PILwoTK]
-recipe = zc.recipe.egg
-find-links =
-    http://download.zope.org/distribution/
 
 [productdistros]
 recipe = plone.recipe.distros
