--- a/versions.cfg
+++ b/versions.cfg
@@ -1,68 +1,17 @@
 [versions]
-PILwoTk = 1.1.6.4
-Products.CalendarX = 0.9.3
-Products.PloneLDAP = 1.1
-Products.Zope-Hotfix-20110622 = 1.0
-PyXML = 0.8.4
-ZSI = 2.0-rc3
-archetypes.schemaextender = 2.0.1
 plone.recipe.distros = 1.5
-plone.reload = 1.3
-python-ldap = 2.3.11
-z3c.jbot = 0.5.3
-
-#Required by:
-#Products.PloneLDAP 1.1
-Products.LDAPMultiPlugins = 1.11
-
-#Required by:
-#Products.PloneLDAP 1.1
-Products.LDAPUserFolder = 2.17
-
-#Required by:
-#dataflake.ldapconnection 1.1
-dataflake.cache = 1.2
-
-#Required by:
-#Products.LDAPUserFolder 2.17
-dataflake.ldapconnection = 1.1
-
-#Required by:
-#collective.captcha 1.3
-skimpyGimpy = 1.4
-
-#Required by:
-#Products.kupu 1.4.16
-zope.i18n = 3.7.2
-
-#Required by:
-#plone.reload 1.3
-#zope.testing 3.8.7
-zope.interface = 3.5.3
-
-#Required by:
-#z3c.autoinclude 0.3.1
-#plone.portlet.static 1.2rc1
-#plone.app.workflow 1.2
-#plone.locking 1.2.0
-#plone.portlets 1.2
-#Products.kupu 1.4.16
-zope.schema = 3.6.1
-
-#Required by:
-#plone.reload 1.3
-zope.testing = 3.8.7
-zope.component = 3.5.1
-five.localsitemanager = 1.1
-collective.plonetruegallery = 0.7.1
-collective.javascript.jqueryui = 1.8.4
-psycopg2 = 2.4.2
+plone.recipe.zope2install = 3.3
+z3c.json = 0.5.5
+z3c.jbot = 0.7.1
+sqlalchemy = 0.7.8
 z3c.sqlalchemy = 1.4.0
-python-ldap = 2.4.12
-Products.PloneLDAP = 1.1
-affinitic.pwmanager = 0.2
-ipython = 0.10
-zope.sqlalchemy = 0.4
-transaction = 1.0.0
-sqlalchemy = 0.7.9
-SQLAlchemy = 0.7.9
+psycopg2 = 2.5.1
+collective.plonetruegallery = 3.4.0
+Products.LocalFS = 1.2
+affinitic.pwmanager = 0.4
+skimpyGimpy = 1.4
+plone.app.contenttypes = 1.0
+collective.ptg.galleria = 1.3.0
+collective.autopermission = 1.0b2
+zope.sqlalchemy = 0.7.3
+plone.formwidget.querystring = 1.1.0
