je donne tout ce que j'ai à Laz

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,101 +1,1 @@
-[buildout]
-extends =
-    https://raw.github.com/affinitic/affinitic.dist/master/plone.cfg
-    https://raw.github.com/affinitic/affinitic.dist/master/plone432.cfg
-    versions.cfg
-develop = .
-extensions =
-    mr.developer
-sources-dir = src
-dump-picked-versions-file = versions-picked.cfg
-versions = versions
-auto-checkout =
-    cesstex.skin
-    cesstex.db.pgsql
-
-parts =
-    productdistros
-    omelette
-
-auto-checkout =
-    cesstex.skin
-    cesstex.db.pgsql
-
-eggs +=
-    archetypes.schemaextender
-    Plone
-    z3c.json
-    z3c.jbot
-    sqlalchemy
-    z3c.sqlalchemy
-    psycopg2
-    egenix-mx-base
-    lxml
-    cesstex.skin
-    cesstex.db.pgsql
-
-[instance]
-user = admin:xxxxxxxx
-http-address = 8880
-ftp-address = 8821
-debug-mode = on
-verbose-security = on
-environment-vars =
-    PTS_LANGUAGES fr
-
-eggs =
-    ${buildout:eggs}
-    collective.plonetruegallery
-    Products.LocalFS
-    affinitic.pwmanager
-
-zcml =
-    cesstex.skin
-    cesstex.db.pgsql
-    collective.plonetruegallery
-    z3c.json
-    archetypes.schemaextender
-    affinitic.pwmanager
-
-zcml-additional =
-    <configure xmlns = "http://namespaces.zope.org/zope"
-               xmlns:passmgr = "http://affinitic.be/passmgr">
-        <passmgr:pwdfile name = "pg"
-                 filename = "pgpass" />
-    </configure>
-
-products =
-    ${productdistros:location}
-
-[sources]
-cesstex.skin = git git@github.com:affinitic/cesstex.skin.git
-cesstex.db.pgsql = git git@github.com:affinitic/cesstex.db.pgsql.git
-
-
-[mx-base]
-recipe = collective.recipe.mxbase
-
-[psycopg2]
-recipe = zc.recipe.egg:custom
-egg = psycopg2
-find-links = http://eggs.affinitic.be/psycopg2-2.0.6.tar.gz
-define = PSYCOPG_EXTENSIONS,PSYCOPG_DISPLAY_SIZE,PSYCOPG_NEW_BOOLEAN,HAVE_PQFREEMEM,HAVE_PQPROTOCOL3
-include-dirs = /usr/include
-library-dirs = /usr/lib
-rpath = /usr/lib
-
-[omelette]
-recipe = collective.recipe.omelette
-eggs = ${instance:eggs}
-products =  ${instance:products}
-
-[productdistros]
-recipe = plone.recipe.distros
-urls =
-
-nested-packages =
-version-suffix-packages =
-
-[sources]
-cesstex.skin = git git@github.com:affinitic/cesstex.skin.git
-cesstex.db.pgsql = git git@github.com:affinitic/cesstex.db.pgsql.git
+base.cfg
