--- a/versions.cfg
+++ b/versions.cfg
@@ -1,17 +1,18 @@
 [versions]
-plone.recipe.distros = 1.5
-plone.recipe.zope2install = 3.3
-z3c.json = 0.5.5
-z3c.jbot = 0.7.1
-sqlalchemy = 0.7.8
-z3c.sqlalchemy = 1.4.0
-psycopg2 = 2.5.1
-collective.plonetruegallery = 3.4.0
 Products.LocalFS = 1.2
 affinitic.pwmanager = 0.4
-skimpyGimpy = 1.4
-plone.app.contenttypes = 1.0
-collective.ptg.galleria = 1.3.0
 collective.autopermission = 1.0b2
-zope.sqlalchemy = 0.7.3
+collective.plonetruegallery = 3.4.0
+collective.ptg.galleria = 1.3.0
+egenix-mx-base = 3.2.7
+plone.app.contenttypes = 1.0
 plone.formwidget.querystring = 1.1.0
+plone.recipe.distros = 1.5
+plone.recipe.zope2install = 3.3
+psycopg2 = 2.5.1
+skimpyGimpy = 1.4
+sqlalchemy = 0.7.8
+z3c.jbot = 0.7.1
+z3c.json = 0.5.5
+z3c.sqlalchemy = 1.4.0
+zope.sqlalchemy = 0.7.3
