ajout de calendarX pour ist

--- a/base.cfg
+++ b/base.cfg
@@ -26,6 +26,7 @@ eggs +=
     z3c.sqlalchemy
     psycopg2
     egenix-mx-base
+    Products.CalendarX
     lxml
     cesstex.skin
     cesstex.db.pgsql
