--- a/versions.cfg
+++ b/versions.cfg
@@ -16,3 +16,5 @@ z3c.jbot = 0.7.1
 z3c.json = 0.5.5
 z3c.sqlalchemy = 1.4.0
 zope.sqlalchemy = 0.7.3
+Products.CalendarX = 1.0.4
+Products.AdvancedQuery = 3.0
