Use subsite branch for skin

--- a/base.cfg
+++ b/base.cfg
@@ -61,7 +61,7 @@ products =
     ${productdistros:location}
 
 [sources]
-cesstex.skin = git git@github.com:affinitic/cesstex.skin.git
+cesstex.skin = git git@github.com:affinitic/cesstex.skin.git branch=subsite
 cesstex.db.pgsql = git git@github.com:affinitic/cesstex.db.pgsql.git
 
 
