--- a/base.cfg
+++ b/base.cfg
@@ -9,6 +9,8 @@ extensions =
 sources-dir = src
 versions = versions
 
+index = http://pypi.affinitic.be/affinitic/packages/+simple/
+
 parts =
     productdistros
     omelette
