--- a/base.cfg
+++ b/base.cfg
@@ -10,6 +10,7 @@ sources-dir = src
 versions = versions
 
 index = http://pypi.affinitic.be/affinitic/packages/+simple/
+allow-hosts = pypi.affinitic.be
 
 parts =
     productdistros
