Add index and allow-host

--- a/base.cfg
+++ b/base.cfg
@@ -9,6 +9,9 @@ extensions =
 sources-dir = src
 versions = versions
 
+index = http://pypi.affinitic.be/affinitic/packages/+simple/
+allow-hosts = pypi.affinitic.be
+
 parts =
     productdistros
     omelette
