--- a/versions.cfg
+++ b/versions.cfg
@@ -18,3 +18,4 @@ z3c.sqlalchemy = 1.4.0
 zope.sqlalchemy = 0.7.3
 Products.CalendarX = 1.0.4
 Products.AdvancedQuery = 3.0
+collective.cookiecuttr = 0.7.4
