--- a/base.cfg
+++ b/base.cfg
@@ -33,7 +33,7 @@ eggs +=
     lxml
     cesstex.skin
     cesstex.db.pgsql
-
+    collective.cookiecuttr
 [instance]
 user = admin:xxxxxxxx
 http-address = 8880
@@ -47,6 +47,7 @@ eggs =
     collective.plonetruegallery
     Products.LocalFS
     affinitic.pwmanager
+    collective.cookiecuttr
 zcml =
     cesstex.skin
     cesstex.db.pgsql
