--- a/versions.cfg
+++ b/versions.cfg
@@ -9,6 +9,7 @@ plone.app.contenttypes = 1.0
 plone.formwidget.querystring = 1.1.0
 plone.recipe.distros = 1.5
 plone.recipe.zope2install = 3.3
+plone.api = 1.2.1
 psycopg2 = 2.5.1
 skimpyGimpy = 1.4
 sqlalchemy = 0.7.8
