Ajout des gestionneires de galerie pour truegallery

--- a/base.cfg
+++ b/base.cfg
@@ -30,10 +30,27 @@ eggs +=
     psycopg2
     egenix-mx-base
     Products.CalendarX
+    Products.LocalFS
     lxml
     cesstex.skin
     cesstex.db.pgsql
+    affinitic.pwmanager
     collective.cookiecuttr
+    collective.quickupload
+    collective.plonetruegallery
+    collective.ptg.highslide
+    collective.ptg.fancybox
+    collective.ptg.galleriffic
+    collective.ptg.s3slider
+    collective.ptg.pikachoose
+    collective.ptg.nivoslider
+    collective.ptg.nivogallery
+    collective.ptg.contentflow
+    collective.ptg.supersized
+    collective.ptg.thumbnailzoom
+    collective.ptg.contactsheet
+    collective.embedly
+
 [instance]
 user = admin:xxxxxxxx
 http-address = 8880
@@ -44,10 +61,6 @@ environment-vars =
     PTS_LANGUAGES fr
 eggs =
     ${buildout:eggs}
-    collective.plonetruegallery
-    Products.LocalFS
-    affinitic.pwmanager
-    collective.cookiecuttr
 zcml =
     cesstex.skin
     cesstex.db.pgsql
